<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_illuminance"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:paddingLeft="8dp"
        android:text="@string/illuminance_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_illuminance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_illuminance"
        app:layout_constraintTop_toTopOf="@+id/image_illuminance" />

    <TextView
        android:id="@+id/text_pressure"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:paddingLeft="8dp"
        android:text="@string/pressure_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_pressure"
        app:layout_constraintTop_toTopOf="@+id/image_pressure" />

    <TextView
        android:id="@+id/text_humidity"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:paddingLeft="8dp"
        android:text="@string/humidity_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_humidity"
        app:layout_constraintTop_toTopOf="@+id/image_humidity" />

    <ImageView
        android:id="@+id/image_pressure"
        android:layout_width="74dp"
        android:layout_height="72dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_humidity"
        app:srcCompat="@drawable/ic__04_pressure_gauge" />

    <ImageView
        android:id="@+id/image_illuminance"
        android:layout_width="76dp"
        android:layout_height="75dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_pressure"
        app:srcCompat="@drawable/ic__03_lightbulb" />

    <ImageView
        android:id="@+id/image_humidity"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_temperature"
        app:srcCompat="@drawable/ic__01_humidity" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAppTitle"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_temperature"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:paddingLeft="8dp"
        android:text="@string/temperature_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_temperature"
        app:layout_constraintTop_toTopOf="@+id/image_temperature" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="131dp"
        android:layout_height="71dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape"
        android:text="@string/check_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/image_temperature"
        android:layout_width="66dp"
        android:layout_height="111dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:srcCompat="@drawable/ic__02_thermometer" />

</android.support.constraint.ConstraintLayout>