<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundStandard"
    android:id="@+id/PredictionActivityLayout"
    tools:context=".PredictionActivity">

    <TextView
        android:id="@+id/text_predicted_precipitation"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:paddingLeft="8dp"
        android:text="@string/precipitation_blank_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_precipitation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/image_illuminance"
        app:layout_constraintTop_toTopOf="@+id/image_precipitation" />

    <ImageView
        android:id="@+id/image_precipitation"
        android:layout_width="76dp"
        android:layout_height="75dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_illuminance"
        app:srcCompat="@drawable/ic__05_precipitation" />

    <TextView
        android:id="@+id/text_header"
        android:layout_width="374dp"
        android:layout_height="43dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/prediction_header_day_text"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_temperature"
        android:layout_width="66dp"
        android:layout_height="111dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_header"
        app:srcCompat="@drawable/ic__02_thermometer" />

    <TextView
        android:id="@+id/text_predicted_temperature"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:paddingLeft="8dp"
        android:text="@string/temperature_blank_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_temperature"
        app:layout_constraintTop_toTopOf="@+id/image_temperature" />

    <ImageView
        android:id="@+id/image_humidity"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_temperature"
        app:srcCompat="@drawable/ic__01_humidity" />

    <TextView
        android:id="@+id/text_predicted_humidity"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:paddingLeft="8dp"
        android:text="@string/humidity_blank_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_humidity"
        app:layout_constraintTop_toTopOf="@+id/image_humidity" />

    <ImageView
        android:id="@+id/image_pressure"
        android:layout_width="74dp"
        android:layout_height="72dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_humidity"
        app:srcCompat="@drawable/ic__04_pressure_gauge" />

    <TextView
        android:id="@+id/text_predicted_pressure"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:paddingLeft="8dp"
        android:text="@string/pressure_blank_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_pressure"
        app:layout_constraintTop_toTopOf="@+id/image_pressure" />

    <ImageView
        android:id="@+id/image_illuminance"
        android:layout_width="76dp"
        android:layout_height="75dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_pressure"
        app:srcCompat="@drawable/ic__03_lightbulb" />

    <TextView
        android:id="@+id/text_predicted_illuminance"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:paddingLeft="8dp"
        android:text="@string/illuminance_blank_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_illuminance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toEndOf="@+id/image_illuminance"
        app:layout_constraintTop_toTopOf="@+id/image_illuminance" />

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="91dp"
        android:layout_height="79dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/ic_return"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/day_night_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/day_night_button"
        android:layout_width="78dp"
        android:layout_height="80dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/ic_day_night"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>